force-app/main/default/objects/Adjustment_Rule__c/Adjustment_Rule__c.object-meta.xml
<CustomObject>
    <description>Defines scoring adjustment rules for health score configurations.</description>
    <label>Adjustment Rule</label>
    <nameField><label>Adjustment Rule Name</label><type>Text</type></nameField>
    <pluralLabel>Adjustment Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>