force-app/main/default/objects/Adjustment_Rule__c/fields/Adjustment_Points__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Points__c</fullName>
    <label>Adjustment Points</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>