force-app/main/default/objects/Adjustment_Rule__c/fields/Health_Score_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Health_Score_Configuration__c</fullName>
    <label>Health Score Configuration</label>
    <type>MasterDetail</type>
    <referenceTo>Health_Score_Configuration__c</referenceTo>
    <relationshipLabel>Adjustment Rules</relationshipLabel>
    <relationshipName>Adjustment_Rules</relationshipName>
</CustomField>