force-app/main/default/objects/Adjustment_Rule__c/fields/Lookback_Days__c.field-meta.xml
<CustomField>
    <fullName>Lookback_Days__c</fullName>
    <label>Lookback Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>