force-app/main/default/objects/Adjustment_Rule__c/fields/Rule_Code__c.field-meta.xml
<CustomField>
    <fullName>Rule_Code__c</fullName>
    <label>Rule Code</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>