force-app/main/default/objects/Adjustment_Rule__c/fields/Trigger_Field__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Field__c</fullName>
    <label>Trigger Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>