force-app/main/default/objects/Adjustment_Rule__c/fields/Trigger_Operator__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Operator__c</fullName>
    <label>Trigger Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Equals</fullName><default>false</default><label>Equals</label></value>
            <value><fullName>Not_Equals</fullName><default>false</default><label>Not Equals</label></value>
            <value><fullName>Greater_Than</fullName><default>false</default><label>Greater Than</label></value>
            <value><fullName>Less_Than</fullName><default>false</default><label>Less Than</label></value>
            <value><fullName>Days_Since_Greater_Than</fullName><default>false</default><label>Days Since Greater Than</label></value>
            <value><fullName>Is_True</fullName><default>false</default><label>Is True</label></value>
            <value><fullName>Is_False</fullName><default>false</default><label>Is False</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>