force-app/main/default/objects/Adjustment_Rule__c/fields/Trigger_Value__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Value__c</fullName>
    <label>Trigger Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>